# LTU-labs

./: .gitmodules  README.md
opengl_graphics_physics/: CMakeLists.txt
opengl_graphics_physics/deferred/: CMakeLists.txt  README.md
opengl_graphics_physics/deferred/code/: PickingApp.cpp  PickingApp.h  main.cpp
opengl_graphics_physics/deferred/config/: shaders.txt  textures.txt
opengl_graphics_physics/deferred/resources/: level.txt  models.txt  shaders.txt  textures.txt
opengl_graphics_physics/deferred_and_forward_particles/: CMakeLists.txt  README.md
opengl_graphics_physics/deferred_and_forward_particles/code/: PickingApp.cpp  PickingApp.h
opengl_graphics_physics/deferred_and_forward_particles/config/: models.txt  shaders.txt  textures.txt
opengl_graphics_physics/deferred_and_forward_particles/resources/: shaders.txt  textures.txt
opengl_graphics_physics/deferred_hdr_bloom_particles/: CMakeLists.txt  README.md
opengl_graphics_physics/deferred_hdr_bloom_particles/code/: PickingApp.cpp  PickingApp.h
opengl_graphics_physics/deferred_hdr_bloom_particles_scenegraph/: CMakeLists.txt  README.md
opengl_graphics_physics/deferred_hdr_bloom_particles_scenegraph/code/: PickingApp.cpp  PickingApp.h
opengl_graphics_physics/deferred_hdr_bloom_particles_scenegraph/resources/: materials.txt  models.txt  shaders.txt  textures.txt
opengl_graphics_physics/deferred_hdr_particles/: CMakeLists.txt  README.md
opengl_graphics_physics/deferred_hdr_particles/code/: PickingApp.cpp  PickingApp.h
opengl_graphics_physics/engine_sandbox/: CMakeLists.txt
opengl_graphics_physics/engine_sandbox/code/: PickingApp.cpp  PickingApp.h
opengl_graphics_physics/engine_sandbox/config/: cubemaps.txt  models.txt  shaders.txt  textures.txt
opengl_graphics_physics/luajit_playground/: CMakeLists.txt  README.md
opengl_graphics_physics/luajit_playground/code/: napp.cpp  napp.h
opengl_graphics_physics/luajit_sandbox/: CMakeLists.txt
opengl_graphics_physics/luajit_sandbox/code/: main.cpp  napp.cpp
opengl_graphics_physics/main_engine_playground/: CMakeLists.txt
opengl_graphics_physics/main_engine_playground/code/: PickingApp.cpp
opengl_graphics_physics/physics/: CMakeLists.txt  README.md
opengl_graphics_physics/physics/code/: PickingApp.cpp  PickingApp.h
opengl_graphics_physics/physics/config/: models.txt  paths.txt  shaders.txt
opengl_graphics_physics/physics/resources/: shaders.txt  textures.txt
opengl_graphics_physics/projects/: CMakeLists.txt
opengl_graphics_physics/projects/deferred/: CMakeLists.txt
opengl_graphics_physics/projects/deferred_and_shadows/: CMakeLists.txt
opengl_graphics_physics/projects/marwac/: CMakeLists.txt
opengl_graphics_physics/projects/subdivision_notoptimized/: CMakeLists.txt
opengl_graphics_physics/projects/subdivision_optimizing/: CMakeLists.txt
opengl_graphics_physics/resources/shaders/: AmbientLightPBRHDR.fs  BRDF.vs  Blur.fs  Blur.vs  DirectionalLight.fs  DirectionalLightHDR.fs  DirectionalLightPBRHDR.fs  DirectionalLightShadowHDR.fs  DirectionalLightShadowPBRHDR.fs  FastBB.fs  FastBBHDR.fs  FastBBHDR.vs  FastBlur.vs  FastBlur.vs.bak  FastBlurShadow.fs  FastLineHDR.fs  FastLineHDR.vs  ForwardClipPlaneHDR.vs  ForwardRefRaf.fs  ForwardShadows.fs  ForwardShadowsCameraSpace.fs  FullScreenQuad.fs  FullScreenQuad.vs  GSkybox.fs  Geometry.fs  GeometryPicking.fs  GeometryPicking.vs  GeometryPickingInstanced.vs  HDR.fs  ParticleHDR.vs  Picking.fs  Picking.vs  PickingWorldPos.fs  PickingWorldPos.vs  PointLight.fs  PointLight.vs  PointLightHDR.fs  PointLightPBRHDR.fs  PointLightShadowHDR.fs  PointLightShadowPBRHDR.fs  (+11 more)
opengl_graphics_physics/shadows/: CMakeLists.txt  README.md
opengl_graphics_physics/shadows/code/: PickingApp.cpp  PickingApp.h  imgui_impl_glfw_gl3.cpp
opengl_graphics_physics/shadows/config/: models.txt  shaders.txt  textures.txt
opengl_graphics_physics/shadows/resources/: shaders.txt  textures.txt
opengl_graphics_physics/simpleWater/: CMakeLists.txt  README.md
opengl_graphics_physics/simpleWater/code/: SimpleWaterApp.cpp  SimpleWaterApp.h
opengl_graphics_physics/simpleWater/resources/: level.txt  shaders.txt  textures.txt
opengl_graphics_physics/subdivision_notoptimized/: CMakeLists.txt  README.md
opengl_graphics_physics/subdivision_notoptimized/code/: HalfEdgeMesh.cpp  HalfEdgeMesh.h  Object.h  Scene.cpp  Scene.h  Vertex.h  main.cpp
opengl_graphics_physics/subdivision_opengl/: CMakeLists.txt  README.md
opengl_graphics_physics/subdivision_opengl/code/: SubdivApp.cpp  SubdivApp.h  main.cpp
opengl_graphics_physics/subdivision_opengl/config/: models.txt  shaders.txt  textures.txt
opengl_graphics_physics/subdivision_opengl/resources/: shaders.txt
opengl_graphics_physics/subdivision_optimizing/: CMakeLists.txt  README.md
opengl_graphics_physics/subdivision_optimizing/code/: Scene.cpp  Scene.h  main.cpp
opengl_graphics_physics/water/: CMakeLists.txt
opengl_graphics_physics/water/code/: SimpleWaterApp.cpp  SimpleWaterApp.h  main.cpp
opengl_graphics_physics/water/config/: models.txt  shaders.txt  textures.txt
projects/marwac/ai2_pathfinding/: CMakeLists.txt
projects/marwac/network_gameclient/: CMakeLists.txt
qt_ai_network/: CMakeLists.txt
qt_ai_network/ai1_statemachine/: CMakeLists.txt
qt_ai_network/ai1_statemachine/code/: BaseGameEntity.cpp  Color.h  EntityManager.cpp  EntityManager.h  Job.h  Location.cpp  MessageDispatcher.cpp  MessageTypes.h  Position.h  Sim.cpp  Sim.h  Size.h  State.h  StateDead.cpp  StateDead.h  StateEating.cpp  StateEating.h  StateGlobal.cpp  StateShopping.cpp  StateSleeping.cpp  StateSleeping.h  StateVisitBathroom.h  Storage.h  Telegram.h  Timer.cpp  Timer.h  ai_lab1_qt.h  ai_lab1_qt.qrc  mTime.h  main.cpp
qt_ai_network/ai2_pathfinding/: CMakeLists.txt
qt_ai_network/ai2_pathfinding/code/: AStar.cpp  AStar.h  Breadth_First.cpp  Breadth_First.h  Depth_first.cpp  Depth_first.h  Dijkstra.cpp  Dijkstra.h  HalfEdgeMesh.h  Random.cpp  Random.h  TurnLeft.cpp  (+6 more)
qt_ai_network/ai2_pathfinding_squaredhc/: CMakeLists.txt
qt_ai_network/network_gameclient/: CMakeLists.txt
(+562 files in other folders)
