cmake_minimum_required(VERSION 3.2)
PROJECT(qt_ai_network)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_LIBRARY(labs INTERFACE)
TARGET_INCLUDE_DIRECTORIES(labs INTERFACE deps)
TARGET_LINK_LIBRARIES(labs INTERFACE MyMathLib STB PoolParty)

ADD_SUBDIRECTORY(deps)

ADD_SUBDIRECTORY(ai2_pathfinding)
ADD_SUBDIRECTORY(ai1_statemachine)
ADD_SUBDIRECTORY(network_gameclient)
