#--------------------------------------------------------------------------
# deferred_hdr_bloom_particles_scenegraph project
#--------------------------------------------------------------------------

PROJECT(deferred_hdr_bloom_particles_scenegraph)
#INCLUDE_DIRECTORIES("code/Managers") #helps access files without any ..\ when including files
INCLUDE_DIRECTORIES("code/")

FILE(GLOB SRC "code/*.h")
FILE(GLOB HEAD "code/*.cpp")
LIST(APPEND SRCSBASE ${SRC} ${HEAD})
SOURCE_GROUP("DeferredHDRBloomParticlesSceneGraph" FILES ${SRCSBASE})

FILE(GLOB SRC "code/Managers/*.cpp")
FILE(GLOB HEAD "code/Managers/*.h")
LIST(APPEND SRCSMANAGERS ${SRC} ${HEAD})
SOURCE_GROUP("DeferredHDRBloomParticlesSceneGraph\\Managers" FILES ${SRCSMANAGERS})

FILE(GLOB SRCVS "resources/shaders/*.vs")
FILE(GLOB SRCFS "resources/shaders/*.fs")
FILE(GLOB SRCGS "resources/shaders/*.gs")
LIST(APPEND SRCSSHADERS ${SRCVS} ${SRCFS} ${SRCGS} )
SOURCE_GROUP("DeferredHDRBloomParticlesSceneGraph\\shaders" FILES ${SRCSSHADERS})

LIST(APPEND ALLSRCS ${SRCSBASE} ${SRCSMANAGERS} ${SRCSSHADERS})

ADD_EXECUTABLE(${PROJECT_NAME} ${ALLSRCS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER "LABS")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} camera frustum graphics_manager scene gl_windowd app particle camera_manager luajit lua_tools imgui)

if(MSVC)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_debug" RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX "_relwithdebinfo" RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RELEASE_POSTFIX "_release" RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES MINSIZEREL_POSTFIX "_minsizerel" RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_CURRENT_SOURCE_DIR})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
endif()