ADD_LIBRARY(labs INTERFACE)
TARGET_INCLUDE_DIRECTORIES(labs INTERFACE deps)
TARGET_LINK_LIBRARIES(labs INTERFACE MyMathLib STB PoolParty)

ADD_SUBDIRECTORY(deps)
ADD_SUBDIRECTORY(shadows)
ADD_SUBDIRECTORY(deferred)
ADD_SUBDIRECTORY(physics)
ADD_SUBDIRECTORY(subdivision_optimizing)
ADD_SUBDIRECTORY(subdivision_notoptimized)
ADD_SUBDIRECTORY(subdivision_opengl)
#ADD_SUBDIRECTORY(deferred_and_shadows)
